tests/ui/from-boxing-duplicate.stderr
error: duplicate #[from] attribute
 --> tests/ui/from-boxing-duplicate.rs:8:5
  |
8 |     #[from(boxing)]
  |     ^^^^^^^^^^^^^^^
